--- a/pages/parts/head.html
+++ b/pages/parts/head.html
@@ -1,10 +1,12 @@
-<div>
+<div class="head">
+<div class="head__nav">
   <a href="./main.html">Главная</a>
   <a href="./post_list.html">список записей</a>
   <a href="./feedback.html">Обратная связь</a>
   <a href="./new_post.html">Новая статья</a>
 </div>
 
-<div>
+<div class="head__auth">
   <a href="./login.html">Войти</a>
+</div>
 </div>
