--- a/pages/main.html
+++ b/pages/main.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Blog</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Description" content="Personal blog">
   </head>
   <body>
   <%= require('html-loader?{"attributes": false}!./parts/head.html') %>
