--- a/pages/parts/head.html
+++ b/pages/parts/head.html
@@ -1,12 +1,26 @@
 <div class="head">
-<div class="head__nav">
-  <a href="./main.html">Главная</a>
-  <a href="./post_list.html">список записей</a>
-  <a href="./feedback.html">Обратная связь</a>
-  <a href="./new_post.html">Новая статья</a>
-</div>
+    <div class="head__nav">
+        <a class="head__logo" href="#"></a>
 
-<div class="head__auth">
-  <a href="./login.html">Войти</a>
-</div>
+<!--        <div class="head__search">-->
+<!--            <label class="head__search__label" for="search">Ищем по сайту</label>-->
+<!--            <textarea id="search"></textarea>-->
+<!--        </div>-->
+
+        <input
+                class="head__search"
+                type="text"
+                placeholder="Поиск"
+                aria-label="Search"
+        />
+
+        <a href="./main.html">Главная</a>
+        <a href="./post_list.html">список записей</a>
+        <a href="./feedback.html">Обратная связь</a>
+        <a href="./new_post.html">Новая статья</a>
+    </div>
+
+    <div class="head__auth">
+        <a href="./login.html">Войти</a>
+    </div>
 </div>
