--- a/pages/parts/posts.html
+++ b/pages/parts/posts.html
@@ -2,45 +2,52 @@
 
 <h3>Тут список наших чудесных постов</h3>
 
-<main>
-  <article>
-    <header>Это чудесная статья</header>
-    <main>Увлекательное начало</main>
-    <a href="#">Читать</a>
-  </article>
-  <article>
-    <header>Это чудесная статья</header>
-    <main>Увлекательное начало</main>
-    <a href="#">Читать</a>
-  </article>
-  <article>
-    <header>Это чудесная статья</header>
-    <main>Увлекательное начало</main>
-    <a href="#">Читать</a>
-  </article>
-  <article>
-    <header>Это чудесная статья</header>
-    <main>Увлекательное начало</main>
-    <a href="#">Читать</a>
-  </article>
-  <article>
-    <header>Это чудесная статья</header>
-    <main>Увлекательное начало</main>
-    <a href="#">Читать</a>
-  </article>
-  <article>
-    <header>Это чудесная статья</header>
-    <main>Увлекательное начало</main>
-    <a href="#">Читать</a>
-  </article>
+<main class="main__posts">
+    <article class="card">
+        <img class="head__logo" alt="aaa" style="width:100%">
+        <div class="card__container">
+            <h4><b>HTML CSS</b></h4>
+            <p>Architect & Engineer</p>
+            <a href="#">Читать далее...</a>
+        </div>
+    </article>
+
+    <article class="card">
+        <img class="head__logo" alt="aaa" style="width:100%">
+        <div class="card__container">
+            <h4><b>HTML CSS</b></h4>
+            <p>Architect & Engineer</p>
+            <a href="#">Читать далее...</a>
+        </div>
+    </article>
+
+    <article class="card">
+        <img class="head__logo" alt="aaa" style="width:100%">
+        <div class="card__container">
+            <h4><b>HTML CSS</b></h4>
+            <p>Architect & Engineer</p>
+            <a href="#">Читать далее...</a>
+        </div>
+    </article>
+
+    <article class="card">
+        <img class="head__logo" alt="aaa" style="width:100%">
+        <div class="card__container">
+            <h4><b>HTML CSS</b></h4>
+            <p>Architect & Engineer</p>
+            <a href="#">Читать далее...</a>
+        </div>
+    </article>
+
+
 </main>
 
 <footer>
-  <a href="#">previous</a>
-  <a href="#">1</a>
-  <a href="#">2</a>
-  <a href="#">3</a>
-  <a href="#">4</a>
-  <a href="#">5</a>
-  <a href="#">next</a>
+    <a href="#">previous</a>
+    <a href="#">1</a>
+    <a href="#">2</a>
+    <a href="#">3</a>
+    <a href="#">4</a>
+    <a href="#">5</a>
+    <a href="#">next</a>
 </footer>
