--- a/pages/parts/sidebar.html
+++ b/pages/parts/sidebar.html
@@ -1,5 +1,25 @@
 <aside>
-  <header>Заголовок навигации</header>
-  <main>Контент</main>
-  <footer>Подвал</footer>
+  <header>Репозиотории</header>
+  <main class="aside_main"><p>Контент</p>
+<textarea placeholder="Поиск"></textarea>
+
+    <a href="#">Репо1</a>
+    <a href="#">Репо1</a>
+    <a href="#">Репо1</a>
+    <a href="#">Репо1</a>
+    <a href="#">Репо1</a>
+    <a href="#">Репо1</a>
+
+
+
+  </main>
+    <footer class="aside_main"><p>Ваши команды</p>
+        <textarea placeholder="Поиск"></textarea>
+    <a href="#">Репо1</a>
+    <a href="#">Репо1</a>
+    <a href="#">Репо1</a>
+    <a href="#">Репо1</a>
+    <a href="#">Репо1</a>
+    <a href="#">Репо1</a>
+  </footer>
 </aside>
