--- a/pages/parts/posts.html
+++ b/pages/parts/posts.html
@@ -1,43 +1,59 @@
-<header>список постов</header>
-
 <h3>Тут список наших чудесных постов</h3>
 
 <main class="main__posts">
     <article class="card">
-        <img class="head__logo" alt="aaa" style="width:100%">
-        <div class="card__container">
-            <h4><b>HTML CSS</b></h4>
-            <p>Architect & Engineer</p>
+        <div class='card__header'>
+            <img class="card__logo"/>
+            <h4><b>Основные подходы к позиционированию элементов</b></h4>
+
+        </div>
+
+            <div class="card__container">
+            <h4><b>Использовать препроцессор для создания страниц приложения "блог" - сверстанные страницы должны быть доступны на githubpages</b></h4>
             <a href="#">Читать далее...</a>
         </div>
     </article>
 
-    <article class="card">
-        <img class="head__logo" alt="aaa" style="width:100%">
-        <div class="card__container">
-            <h4><b>HTML CSS</b></h4>
-            <p>Architect & Engineer</p>
+  <article class="card">
+        <div class='card__header'>
+            <img class="card__logo"/>
+            <h4><b>Использование CSS-фреймворков - нужно ли браться за Бутстарп?</b></h4>
+
+        </div>
+
+            <div class="card__container">
+            <h4><b>Какие вопросы решают CSS-фреймворки, в чем их достоинства и недостатки;
+              поработать с Bootstrap</b></h4>
             <a href="#">Читать далее...</a>
         </div>
     </article>
 
-    <article class="card">
-        <img class="head__logo" alt="aaa" style="width:100%">
-        <div class="card__container">
-            <h4><b>HTML CSS</b></h4>
-            <p>Architect & Engineer</p>
+<article class="card">
+        <div class='card__header'>
+            <img class="card__logo"/>
+            <h4><b>Оптимизация и деплой страниц, метрики для анализа качества</b></h4>
+
+        </div>
+
+            <div class="card__container">
+            <h4><b>Оптимизировать сверстаные страницы по lighthouse и проверить на a11y</b></h4>
             <a href="#">Читать далее...</a>
         </div>
     </article>
 
-    <article class="card">
-        <img class="head__logo" alt="aaa" style="width:100%">
-        <div class="card__container">
-            <h4><b>HTML CSS</b></h4>
-            <p>Architect & Engineer</p>
+<article class="card">
+        <div class='card__header'>
+            <img class="card__logo"/>
+            <h4><b>Инструменты разработки. Тестирование верстки, использование медиазапросов</b></h4>
+
+        </div>
+
+            <div class="card__container">
+            <h4><b>настроить локальный HTTP сервер, browsersync</b></h4>
             <a href="#">Читать далее...</a>
         </div>
     </article>
+
 
 
 </main>
