--- a/pages/new_post.html
+++ b/pages/new_post.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Новая статья</title>
-  </head>
-  <body>
-    <div class="page">
-      <%= require('html-loader?{"attributes": false}!./parts/head.html') %> <%=
-      require('html-loader?{"attributes": false}!./parts/sidebar.html') %> <%=
-      require('html-loader?{"attributes": false}!./parts/posts.html') %> <%=
-      require('html-loader?{"attributes": false}!./parts/footer.html') %>
-    </div>
-  </body>
+<html lang='en'>
+<head>
+  <meta charset='UTF-8' />
+  <title>Новая статья</title>
+</head>
+<body>
+<%= require('html-loader?{"attributes": false}!./parts/head.html') %>
+<div class='container'>
+  <!--   <%= require('html-loader?{"attributes": false}!./parts/sidebar.html') %>-->
+  <div class="page">
+
+
+    <main class='main'>
+      <%= require('html-loader?{"attributes": false}!./parts/post.html') %>
+    </main>
+  </div>
+
+</div>
+<%=
+require('html-loader?{"attributes": false}!./parts/footer.html') %>
+</body>
 </html>
