--- a/pages/parts/footer.html
+++ b/pages/parts/footer.html
@@ -1,3 +1,11 @@
 <footer class='footer'>
-  <a href="#">Куда-то ведет</a>
+<!--  <a href="#">Мы в социальных сетях</a>-->
+
+<!--<picture  class='facebook' alt='facebook' ></picture>-->
+
+  <picture class='facebook'></picture>
+
+  <picture class='instagram'></picture>
+  <picture class='twitter'></picture>
+
 </footer>
