--- a/pages/parts/posts.html
+++ b/pages/parts/posts.html
@@ -58,12 +58,12 @@
 
 </main>
 
-<footer>
-    <a href="#">previous</a>
+<footer class='main__footer'>
+    <a href="#">&lt;</a>
     <a href="#">1</a>
     <a href="#">2</a>
     <a href="#">3</a>
     <a href="#">4</a>
     <a href="#">5</a>
-    <a href="#">next</a>
+    <a href="#">&gt;</a>
 </footer>
