--- a/pages/parts/sidebar.html
+++ b/pages/parts/sidebar.html
@@ -1,7 +1,7 @@
 <aside>
   <header>Репозиотории</header>
-  <main class="aside_main"><p>Контент</p>
-<textarea placeholder="Поиск"></textarea>
+  <main class="aside__main"><p>Контент</p>
+<textarea class="aside__main__label" placeholder="Поиск"></textarea>
 
     <a href="#">Репо1</a>
     <a href="#">Репо1</a>
@@ -13,8 +13,8 @@
 
 
   </main>
-    <footer class="aside_main"><p>Ваши команды</p>
-        <textarea placeholder="Поиск"></textarea>
+    <footer class="aside__main"><p>Ваши команды</p>
+        <textarea class="aside__main__label" placeholder="Поиск"></textarea>
     <a href="#">Репо1</a>
     <a href="#">Репо1</a>
     <a href="#">Репо1</a>
