--- a/pages/parts/footer.html
+++ b/pages/parts/footer.html
@@ -1,11 +1,10 @@
-<footer class='footer'>
-<!--  <a href="#">Мы в социальных сетях</a>-->
+<footer class="footer">
+  <!--  <a href="#">Мы в социальных сетях</a>-->
 
-<!--<picture  class='facebook' alt='facebook' ></picture>-->
+  <!--<picture  class='facebook' alt='facebook' ></picture>-->
 
-  <picture class='facebook'></picture>
+  <picture class="facebook"></picture>
 
-  <picture class='instagram'></picture>
-  <picture class='twitter'></picture>
-
+  <picture class="instagram"></picture>
+  <picture class="twitter"></picture>
 </footer>
