--- a/pages/parts/sidebar.html
+++ b/pages/parts/sidebar.html
@@ -1,7 +1,8 @@
 <aside>
   <header>Репозиотории</header>
-  <main class="aside__main"><p>Контент</p>
-<textarea class="aside__main__label" placeholder="Поиск"></textarea>
+  <main class="aside__main">
+    <p>Контент</p>
+    <textarea class="aside__main__label" placeholder="Поиск"></textarea>
 
     <a href="#">Репо1</a>
     <a href="#">Репо1</a>
@@ -9,12 +10,10 @@
     <a href="#">Репо1</a>
     <a href="#">Репо1</a>
     <a href="#">Репо1</a>
-
-
-
   </main>
-    <footer class="aside__main"><p>Ваши команды</p>
-        <textarea class="aside__main__label" placeholder="Поиск"></textarea>
+  <footer class="aside__main">
+    <p>Ваши команды</p>
+    <textarea class="aside__main__label" placeholder="Поиск"></textarea>
     <a href="#">Репо1</a>
     <a href="#">Репо1</a>
     <a href="#">Репо1</a>
