--- a/pages/parts/head.html
+++ b/pages/parts/head.html
@@ -1,22 +1,16 @@
-<div class='head'>
-  <div class='head__nav'>
-    <a class='head__logo' href='#'></a>
+<div class="head">
+  <div class="head__nav">
+    <a class="head__logo" href="main.html"></a>
 
+    <input class="head__search" type="text" placeholder="Поиск" />
 
-    <input
-      class='head__search'
-      type='text'
-      placeholder='Поиск'
-
-    />
-
-    <a href='./main.html'>Главная</a>
-    <a href='./post_list.html'>Список записей</a>
-    <a href='./feedback.html'>Обратная связь</a>
-    <a href='./new_post.html'>Новая статья</a>
+    <a href="./main.html">Главная</a>
+    <a href="./post_list.html">Список записей</a>
+    <a href="./feedback.html">Обратная связь</a>
+    <a href="./new_post.html">Новая статья</a>
   </div>
 
-  <div class='head__auth'>
-    <a href='./login.html'>Войти</a>
+  <div class="head__auth">
+    <a href="./login.html">Войти</a>
   </div>
 </div>
