--- a/pages/post_list.html
+++ b/pages/post_list.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
+  <head>
+    <meta charset="UTF-8" />
     <title>список</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Description" content="Personal blog">
-
-</head>
-<body>
-<%= require('html-loader?{"attributes": false}!./parts/head.html') %>
-<div class='container'>
-    <!--   <%= require('html-loader?{"attributes": false}!./parts/sidebar.html') %>-->
-    <div class="page">
-
-
-        <main class='main'>
-            <%= require('html-loader?{"attributes": false}!./parts/posts.html') %>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="Description" content="Personal blog" />
+  </head>
+  <body>
+    <%= require('html-loader?{"attributes": false}!./parts/head.html') %>
+    <div class="container">
+      <!--   <%= require('html-loader?{"attributes": false}!./parts/sidebar.html') %>-->
+      <div class="page">
+        <main class="main">
+          <%= require('html-loader?{"attributes": false}!./parts/posts.html') %>
         </main>
+      </div>
     </div>
-
-</div>
-<%=
-require('html-loader?{"attributes": false}!./parts/footer.html') %>
-</body>
+    <%= require('html-loader?{"attributes": false}!./parts/footer.html') %>
+  </body>
 </html>
