--- a/pages/parts/feedback_form.html
+++ b/pages/parts/feedback_form.html
@@ -1,17 +1,17 @@
-<form class="post__form" action="№">
+<form class="postForm" action="№">
   <h2>Свяжитесь с нами</h2>
   <header>
-    <label for="post_title">Представьтесь пожалуйста</label>
+    <label for="postForm--title">Представьтесь пожалуйста</label>
     <input
-      id="post_title"
-      class="post__form__header"
+      id="postForm--title"
+      class="postForm__header"
       type="text"
       placeholder="Фамилия Имя"
     />
   </header>
   <article>
     <textarea
-      class="post__form__textarea"
+      class="postForm__textarea"
       name="post-text"
       placeholder="О чем бы вы хотели нам сообщить"
     ></textarea>
