--- a/pages/parts/footer.html
+++ b/pages/parts/footer.html
@@ -1,10 +1,5 @@
 <footer class="footer">
-  <!--  <a href="#">Мы в социальных сетях</a>-->
-
-  <!--<picture  class='facebook' alt='facebook' ></picture>-->
-
-  <picture class="facebook"></picture>
-
-  <picture class="instagram"></picture>
-  <picture class="twitter"></picture>
+  <img src="./images/vk.png" class="footer__img" />
+  <img src="./images/instagram.png" class="footer__img" />
+  <img src="./images/twt.svg" class="footer__img" />
 </footer>
