--- a/pages/parts/head.html
+++ b/pages/parts/head.html
@@ -1,13 +1,15 @@
 <div class="head">
   <div class="head__nav">
-    <a class="head__logo" href="main.html"></a>
+    <a class="head__logo" href="main.html">
+      <img src="./images/post-it.png" />
+    </a>
 
     <input class="head__search" type="text" placeholder="Поиск" />
 
-    <a href="./main.html">Главная</a>
-    <a href="./post_list.html">Список записей</a>
-    <a href="./feedback.html">Обратная связь</a>
-    <a href="./new_post.html">Новая статья</a>
+    <a class="head__link" href="./main.html">Главная</a>
+    <a class="head__link" href="./post_list.html">Список записей</a>
+    <a class="head__link" href="./feedback.html">Обратная связь</a>
+    <a class="head__link" href="./new_post.html">Новая статья</a>
   </div>
 
   <div class="head__auth">
