--- a/pages/parts/sidebar.html
+++ b/pages/parts/sidebar.html
@@ -1,24 +1,24 @@
-<aside>
-  <header>Репозиотории</header>
+<aside class="aside">
+  <header class="aside__header">Репозиотории</header>
   <main class="aside__main">
     <p>Контент</p>
-    <textarea class="aside__main__label" placeholder="Поиск"></textarea>
+    <textarea class="aside__label" placeholder="Поиск"></textarea>
 
-    <a href="#">Репо1</a>
-    <a href="#">Репо1</a>
-    <a href="#">Репо1</a>
-    <a href="#">Репо1</a>
-    <a href="#">Репо1</a>
-    <a href="#">Репо1</a>
+    <a class="aside_link" href="#">Репо1</a>
+    <a class="aside_link" href="#">Репо1</a>
+    <a class="aside_link" href="#">Репо1</a>
+    <a class="aside_link" href="#">Репо1</a>
+    <a class="aside_link" href="#">Репо1</a>
+    <a class="aside_link" href="#">Репо1</a>
   </main>
   <footer class="aside__main">
     <p>Ваши команды</p>
-    <textarea class="aside__main__label" placeholder="Поиск"></textarea>
-    <a href="#">Репо1</a>
-    <a href="#">Репо1</a>
-    <a href="#">Репо1</a>
-    <a href="#">Репо1</a>
-    <a href="#">Репо1</a>
-    <a href="#">Репо1</a>
+    <textarea class="aside__label" placeholder="Поиск"></textarea>
+    <a class="aside_link" href="#">Репо1</a>
+    <a class="aside_link" href="#">Репо1</a>
+    <a class="aside_link" href="#">Репо1</a>
+    <a class="aside_link" href="#">Репо1</a>
+    <a class="aside_link" href="#">Репо1</a>
+    <a class="aside_link" href="#">Репо1</a>
   </footer>
 </aside>
