--- a/pages/parts/post.html
+++ b/pages/parts/post.html
@@ -1,27 +1,27 @@
-<form class="post__form" action="№">
+<form class="postForm" action="№">
   <h2>Новый пост</h2>
   <header>
     <label for="post_title">Введите заголовок</label>
     <input
       id="post_title"
-      class="post__form__header"
+      class="postForm__header"
       type="text"
       placeholder="Что-то очень интересное"
     />
   </header>
   <article>
     <textarea
-      class="post__form__textarea"
+      class="postForm__textarea"
       name="post-text"
       placeholder="Напишите что-нибудь"
     ></textarea>
   </article>
 
-  <footer class="post__form__footer">
+  <footer class="postForm__footer">
     <label for="post_tags">Введите Теги</label>
     <input
       id="post_tags"
-      class="post__form__header"
+      class="postForm__header"
       type="text"
       placeholder="html css"
     />
