--- a/pages/login.html
+++ b/pages/login.html
@@ -15,11 +15,11 @@
           value="email"
           class="loginForm__username"
         />
-        <input type="password" name="pass" class="loginForm__username" />
+        <input type="password" name="pass" class="loginForm__password" />
 
         <div class="loginForm__action">
-          <input type="Reset" class="loginForm__btn" value="Отмена" />
-          <input class="loginForm__btn" type="submit" value="Вход" />
+          <input type="Reset" class="loginForm__btnReset" value="Отмена" />
+          <input type="submit" class="loginForm__btnSubmit" value="Вход" />
         </div>
       </div>
     </form>
