--- a/pages/parts/post.html
+++ b/pages/parts/post.html
@@ -1,9 +1,9 @@
 <form class="postForm" action="№">
   <h2>Новый пост</h2>
   <header>
-    <label for="post_title">Введите заголовок</label>
+    <label for="post-title">Введите заголовок</label>
     <input
-      id="post_title"
+      id="post-title"
       class="postForm__header"
       type="text"
       placeholder="Что-то очень интересное"
@@ -18,9 +18,9 @@
   </article>
 
   <footer class="postForm__footer">
-    <label for="post_tags">Введите Теги</label>
+    <label for="post-tags">Введите Теги</label>
     <input
-      id="post_tags"
+      id="post-tags"
       class="postForm__header"
       type="text"
       placeholder="html css"
