--- a/pages/parts/posts.html
+++ b/pages/parts/posts.html
@@ -1,6 +1,6 @@
 <h3>Тут список наших чудесных постов</h3>
 
-<main class="main__posts">
+<main class="mainPosts">
   <article class="card">
     <div class="card__header">
       <img src="./images/post-it.png" class="card__logo" />
@@ -72,7 +72,7 @@
   </article>
 </main>
 
-<footer class="main__footer">
+<footer class="mainFooter">
   <a href="#">&lt;</a>
   <a href="#">1</a>
   <a href="#">2</a>
