--- a/pages/parts/sidebar.html
+++ b/pages/parts/sidebar.html
@@ -1,24 +1,24 @@
 <aside class="aside">
   <header class="aside__header">Репозиотории</header>
-  <main class="aside__main">
+  <article class="aside-main">
     <p>Контент</p>
-    <textarea class="aside__label" placeholder="Поиск"></textarea>
+    <textarea class="aside-main__label" placeholder="Поиск"></textarea>
 
-    <a class="aside_link" href="#">Репо1</a>
-    <a class="aside_link" href="#">Репо1</a>
-    <a class="aside_link" href="#">Репо1</a>
-    <a class="aside_link" href="#">Репо1</a>
-    <a class="aside_link" href="#">Репо1</a>
-    <a class="aside_link" href="#">Репо1</a>
-  </main>
-  <footer class="aside__main">
+    <a class="aside-main_link" href="#">Репо1</a>
+    <a class="aside-main_link" href="#">Репо1</a>
+    <a class="aside-main_link" href="#">Репо1</a>
+    <a class="aside-main_link" href="#">Репо1</a>
+    <a class="aside-main_link" href="#">Репо1</a>
+    <a class="aside-main_link" href="#">Репо1</a>
+  </article>
+  <article class="aside-main">
     <p>Ваши команды</p>
-    <textarea class="aside__label" placeholder="Поиск"></textarea>
-    <a class="aside_link" href="#">Репо1</a>
-    <a class="aside_link" href="#">Репо1</a>
-    <a class="aside_link" href="#">Репо1</a>
-    <a class="aside_link" href="#">Репо1</a>
-    <a class="aside_link" href="#">Репо1</a>
-    <a class="aside_link" href="#">Репо1</a>
-  </footer>
+    <textarea class="aside-main__label" placeholder="Поиск"></textarea>
+    <a class="aside-main_link" href="#">Репо1</a>
+    <a class="aside-main_link" href="#">Репо1</a>
+    <a class="aside-main_link" href="#">Репо1</a>
+    <a class="aside-main_link" href="#">Репо1</a>
+    <a class="aside-main_link" href="#">Репо1</a>
+    <a class="aside-main_link" href="#">Репо1</a>
+  </article>
 </aside>
