--- a/pages/parts/feedback_form.html
+++ b/pages/parts/feedback_form.html
@@ -1,9 +1,9 @@
 <form class="postForm" action="№">
   <h2>Свяжитесь с нами</h2>
   <header>
-    <label for="postForm--title">Представьтесь пожалуйста</label>
+    <label for="postForm-title">Представьтесь пожалуйста</label>
     <input
-      id="postForm--title"
+      id="postForm-title"
       class="postForm__header"
       type="text"
       placeholder="Фамилия Имя"
