finish burger menu

--- a/pages/parts/head.html
+++ b/pages/parts/head.html
@@ -1,10 +1,11 @@
 <div class="head">
   <input type="checkbox" class="head_burger" />
 
-  <span class="head__firstSpan"></span>
-  <span class="head__mediumSpan"></span>
-  <span class="head__lastSpan"></span>
-
+  <div class="head__burger">
+    <span class="head__firstSpan"></span>
+    <span class="head__mediumSpan"></span>
+    <span class="head__lastSpan"></span>
+  </div>
   <div class="headInfo">
     <a class="head__logo" href="main.html">
       <img src="./images/post-it.png" />
